--- a/nb/Toms_AK86.ipynb
+++ b/nb/Toms_AK86.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 71,
    "id": "703099ab-cfa3-4333-b9eb-d348d0ac5bba",
    "metadata": {
     "tags": []
@@ -26,7 +26,7 @@
     "import seaborn as sns\n",
     "import pandas\n",
     "\n",
-    "from bridge import deals"
+    "from bridge import deals, assess"
    ]
   },
   {
@@ -389,6 +389,106 @@
     "both = Q_in & T_in\n",
     "P_Tom = np.sum(both)/Ndeals\n",
     "P_Tom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fa6b87f-cf94-4c0a-9007-02c383367273",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cce4a01a-2c27-41f2-b7c8-679ab91c550a",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0299a0ef-84ab-4653-a591-f0ad77c864ac",
+   "metadata": {},
+   "source": [
+    "# Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "48fb61b6-4376-47d7-bf38-7530c4698267",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.24002"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reload(assess)\n",
+    "Q_qdict = assess.parse_query([12, 0, 52, 1])\n",
+    "T_qdict = assess.parse_query([10, 0, 52, 1])\n",
+    "Q_in_2 = assess.query_deals(r, r_n1, Q_qdict)\n",
+    "T_in_2 = assess.query_deals(r, r_n1, T_qdict)\n",
+    "np.sum(Q_in_2 & T_in_2) / Ndeals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "6135bffe-80cb-4d9c-8564-8727b6866b3a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12001"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reload(assess)\n",
+    "final = assess.test_deals(r, r_n1, [(12,0,52,1), (10,0,52,1)])\n",
+    "np.sum(final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "f2edb135-9e47-4229-8b14-b32029ac2207",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'card': 12, 'min_n': 0, 'max_n': 52, 'hand': 1}"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qdict"
    ]
   },
   {
